--- a/src/main/resources/templates/game-list.html
+++ b/src/main/resources/templates/game-list.html
@@ -4,28 +4,30 @@
 <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
-
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style-list.css}"/>
 
 </head>
 
 <body>
 
+<div class="container">    
     <h1 class="h3 mb-3 font-weight-normal justify-content-center">Liste des jeux</h1>
-    <a type="button" class="btn btn-secondary justify-content-center" href="/game/new">Créer un jeu</a>
+    <a type="button" class="btn btn-primary justify-content-center" href="/game/new">Ajouter un jeu</a>
 
 <table class="table">
     <thead>
     <tr>
-        <th scope="col">Titre</th>
-        <th scope="col">Note</th>
-        <th scope="col">Commentaire</th>
-        <th scope="col">Genre</th>
+        <th scope="col"><a href="/game/tri?colonne=titre">Titre</a></th>
+        <th scope="col"><a href="/game/tri?colonne=note">Note</a></th>
+        <th scope="col"><a href="/game/tri?colonne=commentaire">Commentaire</a></th>
+        <th scope="col"><a href="/game/tri?colonne=genre">Genre</a></th>
+        <th scope="col">Actions</th>
     </tr>
 
     </thead>
     <tbody>
         <tr th:each="game: ${games}">
-            <td th:text="${game.title}"/>
+            <td class="h6" th:text="${game.titre}"/>
             <td th:text="${game.note}">/20</td>
             <td th:text="${game.commentaire}"/>
             <td th:text="${game.genre}"/>
@@ -35,59 +37,50 @@
     </tbody>
 </table>
 
-    <span th:text="${paging}" />
-
     <nav aria-label="Page navigation example">
         <ul class="pagination justify-content-center">
 
             <li th:class="${currentPage eq 0}? 'page-item disabled' : 'page-item' "> <!--class="page-item" -->
-                <a class="page-link" th:if="${currentPage > 0}" th:href="'/game/list-page/' + ${currentPage - 1} + '/'" >Previous</a> <!-- th:if="${currentPage eq 0}" -->
+                <a class="page-link" th:if="${currentPage > 0}" th:href="'/game/page?page=' + (${currentPage } - 1)" >Previous</a> <!-- th:if="${currentPage eq 0}" -->
             </li>
-            <li th:class="${currentPage eq 0}? 'page-item active' : 'page-item' "><a class="page-link" th:href="'/game/list-page/0/'">1</a></li>
-            <li th:class="${currentPage eq 1}? 'page-item active' : 'page-item' "><a class="page-link" th:href="'/game/list-page/1/'">2</a></li>
-            <li th:class="${currentPage eq 2}? 'page-item active' : 'page-item' "><a class="page-link" th:href="'/game/list-page/2/'" >3</a></li>
-            <li th:class="${currentPage eq 3}? 'page-item active' : 'page-item' "><a class="page-link" th:href="'/game/list-page/3/'">4</a></li>
-            <li th:class="${currentPage eq 4}? 'page-item active' : 'page-item' "><a class="page-link" th:href="'/game/list-page/4/'">5</a></li>
-            <li th:class="${currentPage eq 5}? 'page-item active' : 'page-item' "><a class="page-link" th:href="'/game/list-page/5/'">6</a></li>
+            <li th:class="${currentPage eq 0}? 'page-item active' : 'page-item' "><a class="page-link" th:href="'/game/page?page=0'">1</a></li>
+            <li th:class="${currentPage eq 1}? 'page-item active' : 'page-item' "><a class="page-link" th:href="'/game/page?page=1'">2</a></li>
+            <li th:class="${currentPage eq 2}? 'page-item active' : 'page-item' "><a class="page-link" th:href="'/game/page?page=2'" >3</a></li>
+            <li th:class="${currentPage eq 3}? 'page-item active' : 'page-item' "><a class="page-link" th:href="'/game/page?page=3'">4</a></li>
+            <li th:class="${currentPage eq 4}? 'page-item active' : 'page-item' "><a class="page-link" th:href="'/game/page?page=4'">5</a></li>
             <li class="page-item">
-                <a class="page-link" th:href="'/game/list-page/' + ${currentPage + 1} + '/'">Next</a>
+                <a class="page-link" th:if="((${currentPage} + 1) < ${totalPage})" th:href="'/game/page?page=' + (${currentPage} + 1)">Next</a>
             </li>
         </ul>
     </nav>
-
-    <h2 class="h3 mb-3 font-weight-normal justify-content-center">Rechercher un jeu :</h2>
-
-    <form class="form-signin" name="request" action="/game/title" method="post">
-    <div class="form-label-group">
-        <input type="text"  class="form-control" name="request" required autofocus/>
-    </div>
-    <div class="form-check">
-        <input class="form-check-input" type="checkbox" name="title" value="title" id="flexCheck1">
-        <label class="form-check-label" for="flexCheck1">
-            Titre
-        </label>
-    </div>
-    <div class="form-check">
-        <input class="form-check-input" type="checkbox" name="note" value="note" id="flexCheck2">
-        <label class="form-check-label" for="flexCheck2">
-            Note
-        </label>
-    </div>
-    <div class="form-check">
-        <input class="form-check-input" type="checkbox" name="commentaire" value="commentaire" id="flexCheck3">
-        <label class="form-check-label" for="flexCheck3">
-            Commentaire
-        </label>
-    </div>
-    <div class="form-check">
-        <input class="form-check-input" type="checkbox" name="genre" value="genre" id="flexCheck4">
-        <label class="form-check-label" for="flexCheck4">
-            Genre
-        </label>
-    </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Rehcercher</button>
+    <div class="formulaire">
+    <form class="form-signin" name="request" action="/game/search" method="post">
+        <div>
+            <label class="h3 mb-3 font-weight-normal justify-content-center">Recherche filtrée : </label>
+            <input class="form-control" type="text" name="texte">
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="rechercheParTitre" id="flexCheckDefault">
+            <label class="form-check-label" for="flexCheckDefault">
+                Titre
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="rechercheParCommentaire" id="flexCheckDefault2">
+            <label class="form-check-label" for="flexCheckDefault2">
+                Commentaire
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="rechercheParGenre" id="flexCheckDefault3">
+            <label class="form-check-label" for="flexCheckDefault3">
+                Genre
+            </label>
+        </div>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Rechercher</button>
     </form>
-
+</div>
+</div>
 </body>
 
 
