--- a/src/main/resources/static/CSS/style-list.css
+++ b/src/main/resources/static/CSS/style-list.css
@@ -15,9 +15,16 @@ body {
 .formulaire {
     margin-left: 200px;
     margin-right: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
 }
 
-.btn.btn-lg.btn-primary.btn-block {
+.btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     width: 140px;
 }
