--- a/src/main/resources/templates/game-list.html
+++ b/src/main/resources/templates/game-list.html
@@ -77,11 +77,9 @@
                 Genre
             </label>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Rechercher</button>
+        <button class="btn btn-primary justify-content-center" type="submit">Rechercher</button>
     </form>
-</div>
+    </div>
 </div>
 </body>
-
-
 </html>
