--- a/src/main/resources/templates/game-edit.html
+++ b/src/main/resources/templates/game-edit.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<form class="form-signin" name="request" action="/game/edit" method="post">
+<form class="form-signin" name="request" action="/game/admin/edit" method="post">
 
     <h1 class="h3 mb-3 font-weight-normal">Editer un jeu</h1>
 
