--- a/src/main/resources/templates/game-list.html
+++ b/src/main/resources/templates/game-list.html
@@ -5,16 +5,34 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/css/style-list.css}"/>
-
+    <link rel="stylesheet" th:href="@{/css/style-accueil.css}">
+    <title>Liste des jeux</title>
 </head>
 
 <body>
 
+    <nav class="navbar navbar-dark bg-dark">
+        <div class="container-fluid justify-content-start">
+            <div class="div1">
+                <a class="btn btn-outline-success me-2" type="button" href="/login">Connection</a>
+            </div>
+            <div class="div1">        
+                <a class="btn btn-outline-success me-2" type="button" href="/Signin">Inscription</a>
+            </div>
+            <div class="div1" sec:authorize="isAuthenticated()"> 
+                <form th:action="@{/logout}" method="get">
+                    <button class="btn btn-outline-warning me-2" type="Submit">Déconnection</button>
+                </form>
+            </div>
+        </div>
+    </nav>
+
 <div class="container">    
     <h1 class="h3 mb-3 font-weight-normal justify-content-center">Liste des jeux</h1>
     <a type="button" class="btn btn-primary justify-content-center" href="/game/new">Ajouter un jeu</a>
-
-<table class="table">
+       <h2 class="h3 mb-3 font-weight-normal justify-content-center">Bienvenue <span class="h3 mb-3 font-weight-normal justify-content-center" th:text="${nameUserConnected}"></span></h2>
+    </br>
+<table class="table">  
     <thead>
     <tr>
         <th scope="col"><a href="/game/tri?colonne=titre">Titre</a></th>
@@ -31,8 +49,10 @@
             <td th:text="${game.note}">/20</td>
             <td th:text="${game.commentaire}"/>
             <td th:text="${game.genre}"/>
-            <td><a type="button" class="btn btn-secondary" th:href="'/game/edit?id=' + ${game.id}">éditer</a></td>
-            <td><a type="button" class="btn btn-secondary" th:href="'/game/delete?id=' + ${game.id}">supprimer</a></td>
+            
+            <td><div sec:authorize="hasAuthority('ROLE_ADMIN')"><a type="button" class="btn btn-secondary" th:href="'/game/admin/edit?id=' + ${game.id}">éditer</a></div></td>
+            <td><div sec:authorize="hasAuthority('ADMIN')"><a type="button" class="btn btn-secondary" th:href="'/game/admin/delete?id=' + ${game.id}">supprimer</a></div></td>
+            
         </tr>
     </tbody>
 </table>
@@ -71,17 +91,17 @@
                 Commentaire
             </label>
         </div>
+        <!--
         <div class="form-check">
             <input class="form-check-input" type="checkbox" name="rechercheParGenre" id="flexCheckDefault3">
             <label class="form-check-label" for="flexCheckDefault3">
                 Genre
             </label>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Rechercher</button>
+        -->
+        <button class="btn btn-primary justify-content-center" type="submit">Rechercher</button>
     </form>
-</div>
+    </div>
 </div>
 </body>
-
-
 </html>
