--- a/src/main/resources/templates/game-list.html
+++ b/src/main/resources/templates/game-list.html
@@ -1,5 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec=" http://www.thymeleaf.org/extras/spring-security ">
 
 <head>
     <meta charset="utf-8" />
@@ -13,25 +14,24 @@
 
     <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid justify-content-start">
-            <div class="div1">
-                <a class="btn btn-outline-success me-2" type="button" href="/login">Connection</a>
-            </div>
-            <div class="div1">
-                <a class="btn btn-outline-success me-2" type="button" href="/Signin">Inscription</a>
-            </div>
             <div class="div1" sec:authorize="isAuthenticated()">
                 <form th:action="@{/logout}" method="get">
                     <button class="btn btn-outline-warning me-2" type="Submit">Déconnection</button>
                 </form>
             </div>
         </div>
+        <div class="div2">
+        <h2 class="h3 mb-3 font-weight-normal justify-content-center">Bienvenue <span class="h3 mb-3 font-weight-normal justify-content-center" th:text="${nameUserConnected}"></span></h2>
+        <img class="img" th:src="'/images/profil/' + ${userConnected.id} + '.jpg'" style="border-radius: 50%" width="100" height="100"/><!--  -->
+            <div sec:authorize="isAuthenticated()"><a type="button" class="btn btn-secondary" href="/file/upload">Changer photo</a></div>
+        </div>
     </nav>
 
 <div class="container">
     <h1 class="h3 mb-3 font-weight-normal justify-content-center">Liste des jeux</h1>
-    <a type="button" class="btn btn-primary justify-content-center" href="/game/new">Ajouter un jeu</a>
-       <h2 class="h3 mb-3 font-weight-normal justify-content-center">Bienvenue <span class="h3 mb-3 font-weight-normal justify-content-center" th:text="${nameUserConnected}"></span></h2>
+    <div sec:authorize="hasAuthority('ADMIN')"><a type="button" class="btn btn-primary justify-content-center" href="/game/new">Ajouter un jeu</a></div>
     </br>
+
 <table class="table">
     <thead>
     <tr>
@@ -39,7 +39,7 @@
         <th scope="col"><a href="/game/tri?colonne=note">Note</a></th>
         <th scope="col"><a href="/game/tri?colonne=commentaire">Commentaire</a></th>
         <th scope="col"><a href="/game/tri?colonne=genre">Genre</a></th>
-        <th scope="col">Actions</th>
+        <div sec:authorize="hasAuthority('ADMIN')"><th scope="col">Actions</th></div>
     </tr>
 
     </thead>
@@ -50,7 +50,7 @@
             <td th:text="${game.commentaire}"/>
             <td th:text="${game.genre}"/>
 
-            <td><div sec:authorize="hasAuthority('ROLE_ADMIN')"><a type="button" class="btn btn-secondary" th:href="'/game/admin/edit?id=' + ${game.id}">éditer</a></div></td>
+            <td><div sec:authorize="hasAuthority('ADMIN')"><a type="button" class="btn btn-secondary" th:href="'/game/admin/edit?id=' + ${game.id}">éditer</a></div></td>
             <td><div sec:authorize="hasAuthority('ADMIN')"><a type="button" class="btn btn-secondary" th:href="'/game/admin/delete?id=' + ${game.id}">supprimer</a></div></td>
 
         </tr>
