commit - refonte project

--- a/src/main/resources/templates/game-edit.html
+++ b/src/main/resources/templates/game-edit.html
@@ -20,28 +20,11 @@
     <input type="text" id="inputTitle" class="form-control" name="titre" th:value="${game.titre}" placeholder="Titre" required autofocus/>
     </div>
 
-    <label for="inputNote">Note /20 :</label>
+    <label for="inputGenre">Genres :</label>
     <div class="form-label-group">
-    <input type="number" id="inputNote" class="form-control" name="note" th:value="${game.note}" placeholder="Note" required autofocus/>
+        <input type="text" id="inputGenre" class="form-control" name="genre" th:value="${game.genre}" placeholder="Genres" required autofocus/>
     </div>
 
-    <label for="inputCommentaire">Commentaire :</label>
-    <div class="form-label-group">
-        <input type="text" id="inputCommentaire" class="form-control" name="commentaire" th:value="${game.commentaire}" placeholder="Commentaire" required autofocus/>
-    </div>
-
-    <div class="form-label-group">
-        <select class="form-select" aria-label="Default select example" name="genre" >
-            <option selected th:value="${game.genre}">Ouvrir pour selectionner un genre pour votre jeu</option>
-            <option value="AVENTURE">AVENTURE</option>
-            <option value="ACTION">ACTION</option>
-            <option value="STRATEGIE">STRATEGIE</option>
-            <option value="RPG">RPG</option>
-            <option value="SIMULATION">SIMULATION</option>
-            <option value="MULTIJOUEUR">MULTIJOUEUR</option>
-            <option value="SOLO">SOLO</option>
-        </select>
-    </div>
     <button class="btn btn-lg btn-primary btn-block" type="submit">Enregister</button>
 </form>
 </body>
