--- a/src/main/resources/templates/accueil.html
+++ b/src/main/resources/templates/accueil.html
@@ -4,30 +4,73 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <!-- <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"> -->
     <link rel="stylesheet" th:href="@{/css/style-accueil.css}">
     <title>Accueil</title>
 </head>
 <body>
-<nav class="navbar navbar-dark bg-dark">
-    <div class="container-fluid justify-content-start">
-        <div class="div1">
-            <a class="btn btn-outline-success me-2" type="button" href="/login">Connection</a>
+<header>
+    <nav class="navbar navbar-dark bg-dark">
+        <div class="container-fluid justify-content-start">
+            <div class="div1">
+                <a class="btn btn-outline-success me-2" type="button" href="/login">Connection</a>
+            </div>
+            <div class="div1">
+                <a class="btn btn-outline-success me-2" type="button" href="/Signin">Inscription</a>
+            </div>
+            <div class="div1" sec:authorize="isAuthenticated()">
+                <form th:action="@{/logout}" method="get">
+                    <button class="btn btn-outline-warning me-2" type="Submit">Déconnection</button>
+                </form>
+            </div>
         </div>
-        <div class="div1">        
-            <a class="btn btn-outline-success me-2" type="button" href="/Signin">Inscription</a>
+    </nav>
+</header>
+<div class="big-container">
+    <div class="container">
+        <div class="card">
+            <div class="box">
+                <div class="content">
+                    <h2>01</h2>
+                    <h3>Connectez  vous</h3>
+                    <p>Inscrivez-vous puis connectez vous afin d'avoir accés aux fonctionnalités de GameEvent. Personnalisez votre profil</p>
+                    <a href="#">Login</a>
+                </div>
+            </div>
         </div>
-        <div class="div1" sec:authorize="isAuthenticated()"> 
-            <form th:action="@{/logout}" method="get">
-                <button class="btn btn-outline-warning me-2" type="Submit">Déconnection</button>
-            </form>
+        <div class="card">
+            <div class="box">
+                <div class="content">
+                    <h2>02</h2>
+                    <h3>Créer votre groupe</h3>
+                    <p>Il vous suffit de créer votre propre groupe d'amis, une fois créer vous pourrez ajouter vos jeux vidéo favoris à la liste !</p>
+                    <a href="#">Créer mon groupe</a>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="box">
+                <div class="content">
+                    <h2>03</h2>
+                    <h3>Invitez vos amis</h3>
+                    <p>Une fois votre groupe créer invitez-y vos amis. Ils pourront également ajouter des jeux vidéo à la liste des favoris du groupe</p>
+                    <a href="#">Inviter mes amis</a>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="box">
+                <div class="content">
+                    <h2>04</h2>
+                    <h3>Créer des Event</h3>
+                    <p>Vous pourrez ensuite créer des Event pour votre groupe d'amis, séléctionnez la date, l'heure, la durée. Vos amis pourrons ensuite vous avertir qu'ils y participent !</p>
+                    <a href="#">Créer un Event</a>
+                </div>
+            </div>
         </div>
     </div>
-</nav>
-</br>
-</br>
-</br>
-<div class="container1">
+</div>
+<!-- <div class="container1">
     <h1>Bienvenue sur Game Event</h1>
 </div>
 <div class="container1">
@@ -35,6 +78,6 @@
 </div>
 <div class="container2">
     <img src="images/gaming.jpg" alt="" width="400px" height="600px">
-</div>
+</div> -->
 </body>
 </html>
