--- a/src/main/resources/templates/connection.html
+++ b/src/main/resources/templates/connection.html
@@ -38,7 +38,7 @@
   </div>  -->
 
   <button class="btn btn-lg btn-primary btn-block" type="submit">Se connecter</button>
-  <p class="mt-5 mb-3 text-muted text-center">&copy; Family Bros since 1998</p>
+  <p class="mt-5 mb-3 text-muted text-center">&copy; GameEvent</p>
 </form>
 </body>
 </html>
