--- a/src/main/resources/templates/game-list.html
+++ b/src/main/resources/templates/game-list.html
@@ -19,11 +19,11 @@
                     <button class="btn btn-outline-warning me-2" type="Submit">Déconnection</button>
                 </form>
             </div>
-        </div>
-        <div class="div2">
-        <h2 class="h3 mb-3 font-weight-normal justify-content-center">Bienvenue <span class="h3 mb-3 font-weight-normal justify-content-center" th:text="${nameUserConnected}"></span></h2>
-        <img class="img" th:src="'/images/profil/' + ${userConnected.id} + '.jpg'" style="border-radius: 50%" width="100" height="100"/><!--  -->
-            <div sec:authorize="isAuthenticated()"><a type="button" class="btn btn-secondary" href="/file/upload">Changer photo</a></div>
+            <div class="div2">
+                <h2 class="h3 mb-3 font-weight-normal justify-content-center">Bienvenue <span class="h3 mb-3 font-weight-normal justify-content-center" th:text="${nameUserConnected}"></span></h2>
+                <img class="img" th:src="'/images/profil/' + ${userConnected.id} + '.jpg'" style="border-radius: 50%" width="100" height="100"/><!--  -->
+                <div sec:authorize="isAuthenticated()"><a type="button" class="btn btn-secondary" href="/file/upload">Changer photo</a></div>
+            </div>
         </div>
     </nav>
 
@@ -36,8 +36,6 @@
     <thead>
     <tr>
         <th scope="col"><a href="/game/tri?colonne=titre">Titre</a></th>
-        <th scope="col"><a href="/game/tri?colonne=note">Note</a></th>
-        <th scope="col"><a href="/game/tri?colonne=commentaire">Commentaire</a></th>
         <th scope="col"><a href="/game/tri?colonne=genre">Genre</a></th>
         <div sec:authorize="hasAuthority('ADMIN')"><th scope="col">Actions</th></div>
     </tr>
@@ -46,8 +44,6 @@
     <tbody>
         <tr th:each="game: ${games}">
             <td class="h6" th:text="${game.titre}"/>
-            <td th:text="${game.note}">/20</td>
-            <td th:text="${game.commentaire}"/>
             <td th:text="${game.genre}"/>
 
             <td><div sec:authorize="hasAuthority('ADMIN')"><a type="button" class="btn btn-secondary" th:href="'/game/admin/edit?id=' + ${game.id}">éditer</a></div></td>
@@ -86,7 +82,7 @@
             </label>
         </div>
         <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="rechercheParCommentaire" id="flexCheckDefault2">
+            <input class="form-check-input" type="checkbox" name="rechercheParGenre" id="flexCheckDefault2">
             <label class="form-check-label" for="flexCheckDefault2">
                 Commentaire
             </label>
