--- a/src/main/resources/templates/game-list.html
+++ b/src/main/resources/templates/game-list.html
@@ -52,7 +52,7 @@
             <td class="h6" th:text="${game.titre}"/>
             <td th:text="${game.genre}"/>
 
-            <td><div sec:authorize="hasAuthority('ROLE_ADMIN')"><a type="button" class="btn btn-secondary" th:href="'/game/admin/edit?id=' + ${game.id}">éditer</a></div></td>
+            <td><div sec:authorize="hasAuthority('ADMIN')"><a type="button" class="btn btn-secondary" th:href="'/game/admin/edit?id=' + ${game.id}">éditer</a></div></td>
             <td><div sec:authorize="hasAuthority('ADMIN')"><a type="button" class="btn btn-secondary" th:href="'/game/admin/delete?id=' + ${game.id}">supprimer</a></div></td>
 
         </tr>
@@ -76,33 +76,21 @@
         </ul>
     </nav>
     <div class="formulaire">
-    <form class="form-signin" name="request" action="/game/search" method="post">
-        <div>
-            <label class="h3 mb-3 font-weight-normal justify-content-center">Recherche filtrée : </label>
-            <input class="form-control" type="text" name="texte">
-        </div>
-        <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="rechercheParTitre" id="flexCheckDefault">
-            <label class="form-check-label" for="flexCheckDefault">
-                Titre
-            </label>
-        </div>
-        <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="rechercheParGenre" id="flexCheckDefault2">
-            <label class="form-check-label" for="flexCheckDefault2">
-                Commentaire
-            </label>
-        </div>
-        <!--
-        <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="rechercheParGenre" id="flexCheckDefault3">
-            <label class="form-check-label" for="flexCheckDefault3">
-                Genre
-            </label>
-        </div>
-        -->
-        <button class="btn btn-primary justify-content-center" type="submit">Rechercher</button>
-    </form>
+        <form class="form-signin" name="request" action="/game/search" method="post">
+            <div>
+                <label class="h3 mb-3 font-weight-normal justify-content-center">Recherche filtrée : </label>
+                <input class="form-control" type="text" name="texte">
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" name="rechercheParTitre" id="flexCheckDefault">
+                <label class="form-check-label" for="flexCheckDefault">Titre</label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" name="rechercheParGenre" id="flexCheckDefault2">
+                <label class="form-check-label" for="flexCheckDefault2">Commentaire</label>
+            </div>
+            <button class="btn btn-primary justify-content-center" type="submit">Rechercher</button>
+        </form>
     </div>
 </div>
 </body>
