--- a/src/main/resources/templates/inscription.html
+++ b/src/main/resources/templates/inscription.html
@@ -7,41 +7,30 @@
   <head>
     <meta charset="utf-8">
     <title>Page d'inscription</title>
-    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
-    <link rel="stylesheet" th:href="@{/css/floating-labels.css}">
+    <link rel="stylesheet" th:href="@{/css/login.css}">
   </head>
 
   <body>
-    <form class="form-signin" action="/signin" method="POST">
-  <div class="text-center mb-4">
-
-    <h1 class="h3 mb-3 font-weight-normal">S'inscrire sur Game event</h1>
-    <p>Veuillez saisir les champs ci-dessous afin de vous inscrire sur le site et d'accéder aux fonctionalités</p>
-  </div>
-
-  <div class="form-label-group">
-    <input type="text" id="inputLogin" class="form-control" name="login" placeholder="Login" required autofocus>
-    <label for="inputLogin">Login :</label>
-  </div>
-  <div class="form-label-group">
-    <input type="email" id="inputEmail" class="form-control" name="email" placeholder="test@test.com" required>
-    <label for="inputEmail">Email :</label>
-  </div>
-  <div class="form-label-group">
-    <input type="password" id="inputPassword" class="form-control" name="password" placeholder="*******" required>
-    <label for="inputPassword">Mot de passe :</label>
-  </div>
-   <div class="form-label-group">
-      <input type="text" id="inputFirstName" class="form-control" name="firstName" placeholder="Prenom">
-      <label for="inputFirstName">Prénom :</label>
-   </div>
-   <div class="form-label-group">
-       <input type="text" id="inputLastName" class="form-control" name="lastName" placeholder="Nom">
-       <label for="inputLastName">Nom :</label>
-   </div>
-
-  <button class="btn btn-lg btn-primary btn-block" type="submit">S'inscrire</button>
-  <p class="mt-5 mb-3 text-muted text-center">&copy; Famille Bros since 1998</p>
-</form>
+    <form class="form" action="/signin" method="POST">
+      <h2>S'inscrire à Game Event</h2>
+      <div class="input">
+        <div class="inputBox">
+          <label>login</label>
+          <input type="text" name="login" placeholder="login" required autofocus>
+        </div>
+        <div class="inputBox">
+          <label>Email</label>
+          <input type="email" name="email" placeholder="example@xyz.com" required autofocus>
+        </div>
+        <div class="inputBox">
+          <label>password</label>
+          <input type="password" name="password" placeholder="*******" required autofocus>
+        </div>
+        <div class="inputBox">
+          <input type="submit" name="" value="S'inscrire">
+        </div>
+      </div>
+      <p class="forget">&copy; GameEvent</p>
+    </form>
 </body>
 </html>
