--- a/src/main/resources/templates/upload-img.html
+++ b/src/main/resources/templates/upload-img.html
@@ -15,11 +15,9 @@
   <body>
   <!-- FORMULAIRE : -->
 
-
-
     <form class="form-signin" enctype="multipart/form-data"  action="/file/upload" method="POST">
 
-      <img class="img" th:src="'/images/profil/' + ${userConnected.id} + '.jpg'" style="border-radius: 50%" width="100" height="100"/>
+      <img class="img" th:src="'/images/profil/' + ${userConnected.uuid} + '.jpg'" style="border-radius: 50%" width="100" height="100"/>
 
   <div class="text-center mb-4">
     <h1 class="h3 mb-3 font-weight-normal">Ajouter/changer votre photo de profil</h1>
@@ -38,12 +36,7 @@
       <div class="alert alert-success" th:if="${message}" role="alert">
         <h2 th:text="${message}"/>
       </div>
-      <a type="button" class="btn btn-outline-primary center" href="/game/list">Retour à la liste de jeux</a>
+      <a type="button" class="btn btn-outline-primary center" href="/user/accueil">Retour sur ma page</a>
 </form>
-
-
-
-
-
 </body>
 </html>
